@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add table.update_values() and table.combine().
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Fix issues/breakage in the previous commit.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
